--- a/KuhleKuh/app/src/main/res/layout/fragment_notifications.xml
+++ b/KuhleKuh/app/src/main/res/layout/fragment_notifications.xml
@@ -26,7 +26,7 @@
             android:id="@+id/text_view_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ET"
+            android:text="ET-Behandlung"
             android:maxLines="1"
             android:layout_below="@+id/text_view_ohrmarke"
             android:layout_alignParentStart="true"
@@ -45,7 +45,7 @@
             android:id="@+id/text_view_eut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Eut"
+            android:text="Euterentzuendung"
             android:maxLines="1"
             android:layout_below="@+id/text_view_et"
             android:layout_alignParentStart="true"
@@ -54,7 +54,7 @@
             android:id="@+id/text_view_eut_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="sonst von-bis oder bool"
+            android:text="von-bis oder bool"
             android:maxLines="1"
             android:layout_below="@+id/text_view_et"
             android:layout_alignParentRight="true"
@@ -64,7 +64,7 @@
             android:id="@+id/text_view_impf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Impf"
+            android:text="Impfung Kaelberflechte"
             android:maxLines="1"
             android:layout_below="@+id/text_view_eut"
             android:layout_alignParentStart="true"
@@ -83,7 +83,7 @@
             android:id="@+id/text_view_klaue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Klaue"
+            android:text="Klauenerkrankung"
             android:maxLines="1"
             android:layout_below="@+id/text_view_impf"
             android:layout_alignParentStart="true"
@@ -102,7 +102,7 @@
             android:id="@+id/text_view_nabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nabel"
+            android:text="Nabelerkrankung"
             android:maxLines="1"
             android:layout_below="@+id/text_view_klaue_date"
             android:layout_alignParentStart="true"
@@ -121,7 +121,7 @@
             android:id="@+id/text_view_nachgeb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nachgeb"
+            android:text="Nachgeburtsverhaltung"
             android:maxLines="1"
             android:layout_below="@+id/text_view_nabel"
             android:layout_alignParentStart="true"
@@ -140,7 +140,7 @@
             android:id="@+id/text_view_sonderb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sonderb"
+            android:text="Sonderbehandlung"
             android:maxLines="1"
             android:layout_below="@+id/text_view_nachgeb"
             android:layout_alignParentStart="true"
@@ -159,7 +159,7 @@
             android:id="@+id/text_view_trockenst"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Trockenst"
+            android:text="Trockenstellen"
             android:maxLines="1"
             android:layout_below="@+id/text_view_sonderb"
             android:layout_alignParentStart="true"
